# cookiecutter-forecast-model

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  test_pandera.py
abc_core/: run.py
abc_core/constant/: mapping.py  name.py
abc_core/pipelines/: pipeline_manager.py
abc_core/pipelines/core/: base_pipeline.py  data_processing_pipeline.py  forecast_model_pipeline.py
abc_core/schema/: base_schema.py  dummy_data.py  feature_data.py
abc_core/tasks/: base_task.py
abc_core/tasks/data_processing/: process_dummy_data.py
abc_core/tasks/forecast_model/: evaluate_model.py  feature_engineering.py  prepare_train_data.py  train_ml_model.py
abc_core/utils/: basis_fcns.py  evaluate.py  model_utils.py  parser.py  read_write.py  setup.py  timing.py  transform.py  versioning.py
config/: base_config.yml  directory.yml  ml_model.yml  optimisation.yml  pipelines.yml  run_details.yml
configs/: data_processing.yml  directory.yml  forecast_model.yml  pipelines.yml  run_details.yml
forecasting_core/: __main__.py  run.py
forecasting_core/constant/: mapping.py  name.py
forecasting_core/pipelines/: pipeline_manager.py
forecasting_core/pipelines/core/: base_pipeline.py  data_processing_pipeline.py  forecast_model_pipeline.py
forecasting_core/pipelines/dummy_pipelines/: dummy_modeling_pipeline.py  dummy_processing_pipeline.py
forecasting_core/schema/: base_schema.py
forecasting_core/tasks/data_processing/: process_dataset.py
forecasting_core/tasks/dummy_tasks/: process_data.py
forecasting_core/tasks/forecast_model/: feature_engineering.py
forecasting_core/utils/: data_loading_and_writing.py  setup.py  versioning.py
source/: run.py
source/constant/: name.py
source/pipelines/: pipeline_manager.py
source/schema/: base_schema.py  dummy_data.py
source/utils/: cleaning.py  read_write.py  setup.py  transform.py  versioning.py
(+41 files in other folders)
